<resources>
    <string name="app_name">CarrotTV</string>


    <!-- OpengL -->
    <string name="rtsp_streamer">Custom RTSP</string>
    <string name="rtmp_streamer">Custom RTMP</string>
    <string name="default_rtmp">Default RTMP</string>
    <string name="default_rtsp">Default RTSP</string>
    <string name="from_file_rtsp">From file RTSP</string>
    <string name="from_file_rtmp">From file RTMP</string>
    <string name="surface_mode_rtsp">Surface mode RTSP</string>
    <string name="surface_mode_rtmp">Surface mode RTMP</string>
    <string name="texture_mode_rtsp">Texture mode RTSP</string>
    <string name="texture_mode_rtmp">Texture mode RTMP</string>
    <string name="display_rtmp">Display RTMP</string>
    <string name="display_rtsp">Display RTSP</string>
    <string name="opengl_rtmp">OpenGl RTMP</string>
    <string name="opengl_rtsp">OpenGl RTSP</string>
    <string name="cube_test_rtmp">Cube test RTMP</string>

    <string name="tv_select">Select your streamer</string>
    <string name="hint_rtsp">rtsp://yourendpoint</string>
    <string name="hint_rtmp">rtmp://yourendpoint</string>
    <string name="start_button">Start stream</string>
    <string name="stop_button">Stop stream</string>
    <string name="switch_camera_button">Switch camera</string>
    <string name="select_file">Select file</string>
    <string name="start_record">Start record</string>
    <string name="stop_record">Stop record</string>
    <string name="resync_file">ReSync file</string>
    <!--menu-->
    <string name="microphone">Microphone</string>
    <string name="filters">Filters</string>
    <string name="clear">Clear</string>
    <string name="grey_scale">Grey scale</string>
    <string name="negative">Negative</string>
    <string name="sepia">Sepia</string>
    <string name="aqua">Aqua</string>
    <string name="posterize">Posterize</string>
    <!--gl menu-->
    <string name="enable_disable_fxaa">enable/disable FXAA</string>
    <string name="stream_object">Stream object</string>
    <string name="gif">Gif</string>
    <string name="image">Image</string>
    <string name="text">Text</string>
    <!--filters-->
    <string name="no_filter">No filter</string>
    <string name="android_view">Android view</string>
    <string name="basic_deformation">Basic deformation</string>
    <string name="beauty">Beauty</string>
    <string name="blur">Blur</string>
    <string name="brightness">Brightness</string>
    <string name="cartoon">Cartoon</string>
    <string name="contrast">Contrast</string>
    <string name="duotone">Duotone</string>
    <string name="earlybird">EarlyBird</string>
    <string name="edge_detection">Edge detection</string>
    <string name="exposure">Exposure</string>
    <string name="fire">Fire</string>
    <string name="gamma">Gamma</string>
    <string name="halftone_lines">Halftone lines</string>
    <string name="image_70s">Image 70s</string>
    <string name="lamoish">Lamoish</string>
    <string name="money">Money</string>
    <string name="pixelated">Pixelated</string>
    <string name="polygonization">Polygonization</string>
    <string name="ripple">Ripple</string>
    <string name="saturation">Saturation</string>
    <string name="rainbow">Rainbow</string>
    <string name="sharpness">Sharpness</string>
    <string name="temperature">Temperature</string>
    <string name="zebra">Zebra</string>
    <!--drawer-->
    <string name="drawer_title">Options</string>
    <string name="protocols">Protocol</string>
    <string name="tcp">TCP</string>
    <string name="udp">UDP</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="resolution">Resolution</string>
    <string name="video_bitrate">Bitrate (on fly)</string>
    <string name="audio_bitrate">Bitrate</string>
    <string name="fps">FPS</string>
    <string name="orientation">Orientation</string>
    <string name="hardware_rotation">Hardware rotation</string>
    <string name="samplerate">SampleRate</string>
    <string name="channel">Channel</string>
    <string name="stereo">Stereo</string>
    <string name="mono">Mono</string>
    <string name="echo_canceler">Echo canceler</string>
    <string name="camera">Camera</string>
    <string name="wowza_auth">Wowza Auth</string>
    <string name="wowza_user">User</string>
    <string name="wowza_password">Password</string>
    <string name="noise_suppressor">Noise suppressor</string>
    <string name="profile">프로필</string>
    <string name="사진촬영">사진 촬영</string>
    <string name="앨범에서사진선택">앨범에서 사진 선택</string>
    <string name="기본이미지">기본 이미지</string>
    <string name="JD_이제동">JD_이제동</string>
    <string name="생_방송중입니다">[생] 방송중입니다.</string>
    <string name="돌아가기">돌아가기</string>
    <string name="방송제목">방송 제목(15자 이내)</string>
    <string name="방송시작">방송시작</string>
    <string name="닉네임">닉네임</string>
    <string name="채팅내용">채팅내용</string>
    <string name="bj_filename">bj_fileName 저장</string>
    <string name="bj_id">bj_id 저장</string>
    <string name="broadcast">broadcast</string>
    <string name="asl">[생]스타 이제동 ASL 중계</string>
    <string name="글자인식">글자인식</string>
    <string name="네이버기사">네이버 기사</string>
    <string name="로그아웃">로그아웃</string>
    <string name="방송다시보기">방송 다시보기</string>
    <string name="방송시작하기">방송 시작하기</string>
    <string name="사진선택">사진 선택</string>
    <string name="실시간생방송">실시간 생방송</string>
    <string name="증강현실">증강현실</string>
    <string name="남은거리"><![CDATA[< 남은 거리 >]]></string>
    <string name="계산중입니다">계산 중입니다...</string>
    <string name="ar길찾기">AR 길찾기</string>
    <string name="tmap길찾기">Tmap 길찾기</string>
    <string name="find_you_path">Find you Path</string>
    <string name="모바일지갑">모바일 지갑</string>
    <string name="_0102_0102_0102">#0102#0102#0102#</string>
    <string name="_1000">1000 개</string>
    <string name="보유중인토큰갯수">보유 중인 토큰 갯수</string>
    <string name="요청하기">요청하기</string>
    <string name="개수를입력">요청할 토큰 개수를 입력해주세요</string>
    <string name="지갑주소">지갑주소</string>
    <string name="확인중">확인 중...</string>
    <string name="검색">검색</string>
    <string name="메모가없습니다">메모가 없습니다.</string>
    <string name="nothing">nothing</string>
    <string name="메모내용">메모 내용</string>
    <string name="_2018_07_01">2018.07.01</string>
    <string name="hello">Hello</string>
    <string name="번역전">번역 전</string>
    <string name="번역후">번역 후</string>
    <string name="안녕하세요">안녕하세요</string>
    <string name="인식된글자">인식 된 글자</string>
    <string name="저장하기">저장하기</string>
    <string name="번역중입니다">번역 중입니다...</string>
    <string name="굵기">굵기 :</string>
    <string name="그림판">그림판</string>
    <string name="별풍선충전">별풍선 충전</string>
    <string name="검정색">검정색</string>
    <string name="현재색상">현재 색상 :</string>
    <string name="메모장">메모장</string>
    <string name="_8_15">8자이상 15자 이내</string>
    <string name="ex_abc_naver_com">ex) abc@naver.com</string>
    <string name="ex">ex) 당근몬스터</string>
    <string name="가입하기">가입하기</string>
    <string name="닉네임_">닉네임 :</string>
    <string name="비밀번호">비밀번호 :</string>
    <string name="비밀번호다시">비밀번호 다시 입력</string>
    <string name="비밀번호확인">비밀번호 확인 :</string>
    <string name="아이디">아이디 :</string>
    <string name="중복체크">중복체크</string>
    <string name="회원가입">회원가입</string>

</resources>
