<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.2">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="#3ECFC0"
            android:textStyle="bold"
            android:textSize="28sp"
            android:text="@string/회원가입" />

    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.65">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:textStyle="bold"
                android:textSize="17sp"
                android:text="@string/닉네임_" />

            <EditText
                android:id="@+id/editText_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/ex" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <Space
                android:layout_width="0sp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="0sp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_check01"
                android:layout_height="wrap_content"
                android:layout_width="0sp"
                android:layout_weight="0.3"
                android:layout_marginEnd="20sp"
                android:background="@drawable/button_round"
                android:textColor="#FFFFFF"
                android:text="@string/중복체크" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:textStyle="bold"
                android:textSize="17sp"
                android:text="@string/아이디" />

            <EditText
                android:id="@+id/editText_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/ex_abc_naver_com" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4" />

            <Space
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3" />

            <Button
                android:id="@+id/btn_check02"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20sp"
                android:layout_weight="0.3"
                android:background="@drawable/button_round"
                android:textColor="#FFFFFF"
                android:text="@string/중복체크" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:textStyle="bold"
                android:textSize="17sp"
                android:text="@string/비밀번호" />

            <EditText
                android:id="@+id/editText_password01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/_8_15"
                 />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:textStyle="bold"
                android:textSize="17sp"
                android:text="@string/비밀번호확인" />

            <EditText
                android:id="@+id/editText_password02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/비밀번호다시" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:background="@drawable/button_round"
            android:textColor="#FFFFFF"
            android:text="@string/가입하기"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_back04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_weight="1"
            android:background="@drawable/button_round"
            android:textColor="#FFFFFF"
            android:text="@string/돌아가기"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>