<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="#EDEDED"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_weight="0.25"
        android:layout_marginStart="5sp"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        >

        <ImageView
            android:id="@+id/broadcast_image"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:contentDescription="@string/broadcast"
            app:srcCompat="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/image_state"
            android:layout_width="45sp"
            android:layout_height="25sp"
            app:srcCompat="@drawable/live"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_weight="0.75"
        android:layout_marginLeft="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="8sp"
        android:layout_marginRight="10sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/broadcast_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#353535"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/asl" />

        <TextView
            android:id="@+id/broadcast_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3sp"
            android:textSize="13sp"
            android:textColor="#41B193"
            android:text="@string/JD_이제동" />

        <TextView
            android:id="@+id/hidden_bjId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/bj_id" />

        <TextView
            android:id="@+id/hidden_fileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/bj_filename" />
    </LinearLayout>


</LinearLayout>