<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_memo"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:contentDescription="@string/nothing"
            app:srcCompat="@drawable/carrot"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10sp"
            android:layout_alignStart="@+id/text_memoContent" />

        <TextView
            android:id="@+id/text_memoContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="5sp"
            android:text="@string/메모내용"
            android:textColor="#333333"
            android:textSize="17sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/text_memoDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:text="@string/_2018_07_01" />

    <TextView
        android:id="@+id/hidden_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</LinearLayout>