<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <fragment
        android:id="@+id/fragment"
        xmlns:tools="http://schemas.android.com/tools"
        android:name="com.google.android.gms.maps.MapFragment"
        tools:layout="@android:layout/activity_list_item"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.65"/>

    <ScrollView
        android:id="@+id/map_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.35"
        >

        <LinearLayout
            android:id="@+id/linear_findPath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="5sp"
                android:text="@string/find_you_path"
                android:textColor="#353535"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_ArPath"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginEnd="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginTop="5sp"
                android:background="@drawable/button_round"
                android:text="@string/ar길찾기"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_Tmap"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginEnd="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginTop="5sp"
                android:background="@drawable/button_round"
                android:text="@string/tmap길찾기"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_streetView"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginEnd="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginTop="5sp"
                android:background="@drawable/button_round"
                android:text="주변 보기"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>